tests/paczka1/small_fuzzy/47910939.err
Error in line 14: ZQXmR S93 -6,4
Error in line 15: rnG6p S93 88,4
